<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/city_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/city_hint" />

    <Button
        android:id="@+id/getdata"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/violet"
        android:text="@string/get_btn"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/display_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

</LinearLayout>